make sure all images in the bottom of a listing have same alignment.

--- a/wp-content/themes/currentorg/less/wpbdp.less
+++ b/wp-content/themes/currentorg/less/wpbdp.less
@@ -349,12 +349,14 @@
   .extra-images {
     margin-top: @common-whitespace;
     margin-bottom: @common-whitespace;
-    img + img {
-      margin-top: @common-whitespace;
+    img {
       clear: both;
       display: block;
       margin-right: auto;
       margin-left: auto;
+    }
+    img + img {
+      margin-top: @common-whitespace;
     }
   }
   .listing-contact-details {
